--- a/bistak/hasiera.html
+++ b/bistak/hasiera.html
@@ -10,6 +10,21 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 <body>
-    <button id="bilatuBistara">Ados</button>
+    <br>
+    <br>
+    <div class="container text-center bg-light">
+        <div class="jumbotron ">
+            <div class="text-uppercase"<div>
+                <h1>Actas de Jenui</h1>
+            </div>
+            <img class="rounded mx-auto d-block" src="./images/descarga.png" border="0" /></div>
+            <p>Web orri honen bitartez, JENUI aktak bilatu ahal
+                izango dira, hainbat modutan, eta beraien edukia ikustatu: 
+                laburpena, informazioa edota JENUI aktak pdf formatuan.
+            </p>
+            <p>Egin klik hurrengo botoian bilaketak egiten hasteko!</p>
+            <button id="bilatuBistara">Ados</button>
+        </div>
+    </div>   
 </body>
 </html>
