Argazkia ondo jarrita

--- a/bistak/hasiera.html
+++ b/bistak/hasiera.html
@@ -17,7 +17,9 @@
             <div class="text-uppercase"<div>
                 <h1>Actas de Jenui</h1>
             </div>
-            <img class="rounded mx-auto d-block" src="./images/descarga.png" border="0" /></div>
+            <div class="col-lg-12">
+                <img class="rounded mx-auto d-block" src="./images/descarga.png" border="0" /></div>
+            </div>
             <p>Web orri honen bitartez, JENUI aktak bilatu ahal
                 izango dira, hainbat modutan, eta beraien edukia ikustatu: 
                 laburpena, informazioa edota JENUI aktak pdf formatuan.
