--- a/bistak/hasiera.html
+++ b/bistak/hasiera.html
@@ -18,7 +18,7 @@
                 <h1>Actas de Jenui</h1>
             </div>
             <div class="col-lg-12">
-                <img class="rounded mx-auto d-block" src="./images/descarga.png" border="0" /></div>
+                <img class="rounded mx-auto d-block img-fluid" src="./images/descarga.png" border="0" /></div>
             </div>
             <p>Web orri honen bitartez, JENUI aktak bilatu ahal
                 izango dira, hainbat modutan, eta beraien edukia ikustatu: 
