--- a/bistak/hasiera.html
+++ b/bistak/hasiera.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="h-100" lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasiera</title>
     <script src="js/hasiera.js" type="module"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
 </head>
-<body>
-    <br>
-    <br>
-    <div class="container text-center bg-light">
-        <div class="jumbotron ">
-            <div class="text-uppercase"<div>
+
+<body style="height: 100%;">
+    <div class="container-fluid text-center bg-light d-flex align-items-center h-100">
+        <div class="">
+            <div class="text-uppercase">
                 <h1>Actas de Jenui</h1>
             </div>
             <div class="col-lg-12">
-                <img class="rounded mx-auto d-block img-fluid" src="./images/descarga.png" border="0" /></div>
+                <img class="rounded mx-auto d-block img-fluid" src="./images/descarga.png" border="0" />
             </div>
             <p>Web orri honen bitartez, JENUI aktak bilatu ahal
-                izango dira, hainbat modutan, eta beraien edukia ikustatu: 
+                izango dira, hainbat modutan, eta beraien edukia ikustatu:
                 laburpena, informazioa edota JENUI aktak pdf formatuan.
             </p>
             <p>Egin klik hurrengo botoian bilaketak egiten hasteko!</p>
             <button id="bilatuBistara">Ados</button>
         </div>
-    </div>   
+    </div>
 </body>
+
 </html>
