Hasierako orriari gutxieneko egitura eman bootstrapekin

--- a/bistak/hasiera.html
+++ b/bistak/hasiera.html
@@ -14,21 +14,21 @@
         crossorigin="anonymous"></script>
 </head>
 
-<body style="height: 100%;">
+<body style="height: 100%;" class="bg-warning">
     <div class="container-fluid text-center bg-light d-flex align-items-center h-100">
-        <div class="">
+        <div class="mx-auto border shadow pt-5 pb-5 col-md-6 col-sm-10 bg-light">
             <div class="text-uppercase">
-                <h1>Actas de Jenui</h1>
+                <h1 class="h1">Actas de Jenui</h1>
             </div>
             <div class="col-lg-12">
                 <img class="rounded mx-auto d-block img-fluid" src="./images/descarga.png" border="0" />
             </div>
-            <p>Web orri honen bitartez, JENUI aktak bilatu ahal
+            <p class="fs-5 px-2 pt-1 pb-2 mx-auto">Web orri honen bitartez, JENUI aktak bilatu ahal
                 izango dira, hainbat modutan, eta beraien edukia ikustatu:
                 laburpena, informazioa edota JENUI aktak pdf formatuan.
             </p>
-            <p>Egin klik hurrengo botoian bilaketak egiten hasteko!</p>
-            <button id="bilatuBistara">Ados</button>
+            <p class="fs-5 px-3 pt-2">Egin klik hurrengo botoian bilaketak egiten hasteko!</p>
+            <button id="bilatuBistara" class="btn btn-primary">Ados</button>
         </div>
     </div>
 </body>
