--- a/bistak/hasiera.html
+++ b/bistak/hasiera.html
@@ -15,7 +15,7 @@
 </head>
 
 <body style="height: 100%;">
-    <div class="container-fluid text-center bg-light d-flex align-items-center h-100" style="background-color: #81B29A !important">
+    <div class="container-fluid text-center bg-light d-flex align-items-center h-100" style="background-color: #E07A5F !important">
         <div class="mx-auto border shadow pt-5 pb-5 col-md-6 col-sm-10 bg-light">
             <div class="text-uppercase">
                 <h1 class="h1">Actas de Jenui</h1>
