Bilatu orrian aldaketak estiloetan

--- a/bistak/informazioa.html
+++ b/bistak/informazioa.html
@@ -7,7 +7,7 @@
     <title>Informazioa</title>
     <script src="js/informazioa.js" type="module"></script>
 </head>
-<body>
+<body style="background-color: #E07A5F !important">
     
 </body>
 </html>
