--- a/bistak/hasiera.html
+++ b/bistak/hasiera.html
@@ -9,13 +9,15 @@
     <script src="js/hasiera.js" type="module"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+     <link rel="stylesheet" href="css/main.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+    
 </head>
 
 <body style="height: 100%;">
-    <div class="container-fluid text-center bg-light d-flex align-items-center h-100" style="background-color: #E07A5F !important">
+    <div class="container-fluid text-center bg-light d-flex align-items-center h-100" style="background: var(--background-var) !important;">
         <div class="mx-auto border shadow pt-5 pb-5 col-md-6 col-sm-10" style="background-color: white !important;">
             <div class="text-uppercase">
                 <h1 class="h1">Actas de Jenui</h1>
@@ -28,7 +30,7 @@
                 laburpena, informazioa edota JENUI aktak pdf formatuan.
             </p>
             <p class="fs-5 px-3 pt-2">Egin klik hurrengo botoian bilaketak egiten hasteko!</p>
-            <button id="bilatuBistara" class="btn btn-primary">Ados</button>
+            <button id="bilatuBistara" class="btn btn-primary btn-lg">Ados</button>
         </div>
     </div>
 </body>
