--- a/bistak/informazioa.html
+++ b/bistak/informazioa.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informazioa</title>
+    <link rel="stylesheet" href="css/main.css">
     <script src="js/informazioa.js" type="module"></script>
 </head>
-<body style="background-color: #E07A5F !important">
+<body style="background: var(--background-var) !important;">
     
 </body>
 </html>
