--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <script src="https://guskikalola.eus/cors/aenui.org/actas/js/articulos.js"></script>
+    <script src="https://guskikalola.eus/cors/aenui.org/actas/js/ediciones.js"></script>
     <script src="bistak/js/index.js" type="module"></script>
     <link rel="stylesheet" href="bistak/css/main.css">
     <style>
