--- a/bistak/aboutus.html
+++ b/bistak/aboutus.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasiera</title>
-    <script src="js/about.js" type="module"></script>
     <script src="js/hasiera.js" type="module"></script>
+    <script src="js/about.js" type="module"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -18,9 +18,14 @@
 <body style="height: 100%;">
     <div class="container-fluid text-center bg-light d-flex align-items-center h-100" style="background-color: #E07A5F !important">
         <div class="mx-auto border shadow pt-5 pb-5 col-md-6 col-sm-10" style="background-color: white !important;">
-            <div class="text-uppercase">
-                <h1 class="h1">Actas de Jenui</h1>
+            <div class="about-section">
+                <h1>About Us</h1>
+                <p>UPV/EHU-ko Ingenieria Informatika graduko 3.mailako ikasleak gara, eta webgune honen bitartez boostrap tresna landu dugu,
+                    existitzen den webgune baten gainean aplikatuz: </p>
+                <a> </a>
+                <p>Pertsona eta konputagailuen elkarrekintza (PKE) ikasgaian ikasitakoa baliatuz, eta </p>
             </div>
+            <h2>Gure Taldea</h2>
             <div class="col-lg-12">
                 <img class="rounded mx-auto d-block img-fluid" src="./images/descarga.png" border="0" />
             </div>
