--- a/index.html
+++ b/index.html
@@ -22,11 +22,39 @@
             width: 100%;
             height: 100%;
         }
+        #content {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        #aboutBistara {
+            line-height: 12px;
+            width: 100px;
+            font-size: 8pt;
+            font-family: tahoma;
+            margin-top: 10px;
+            margin-right: 10px;
+            position:absolute;
+            top:0;
+            right:0;
+        }
     </style>
 </head>
 
 <body style="background: --background-var !important">
-
+    <div id="content">
+        <header id="content">
+            <div class="nav">
+                <button id="aboutBistara" type="button" class="btn btn-primary ">About us</button>
+            </div>    
+          </header>
+        <iframe id="webgunea">
+        </iframe>
+    </div>
+    
 </body>
 
 </html>
