--- a/bistak/aboutus.html
+++ b/bistak/aboutus.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hasiera</title>
     <script src="js/hasiera.js" type="module"></script>
-    <script src="js/about.js" type="module"></script>
+    <link rel="stylesheet" href="css/about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
@@ -20,21 +20,47 @@
         <div class="mx-auto border shadow pt-5 pb-5 col-md-6 col-sm-10" style="background-color: white !important;">
             <div class="about-section">
                 <h1>About Us</h1>
-                <p>UPV/EHU-ko Ingenieria Informatika graduko 3.mailako ikasleak gara, eta webgune honen bitartez boostrap tresna landu dugu,
-                    existitzen den webgune baten gainean aplikatuz: </p>
-                <a> </a>
-                <p>Pertsona eta konputagailuen elkarrekintza (PKE) ikasgaian ikasitakoa baliatuz, eta </p>
+                <p class="fs-7 px-2 pt-1 pb-2 mx-auto">UPV/EHU-ko Ingenieria Informatika graduko 3.mailako ikasleak gara, eta webgune honen bitartez boostrap tresna landu dugu,
+                    existitzen den webgune baten gainean aplikatuz: 
+                <a href="https://aenui.org/actas/indice_i.html">https://aenui.org/actas/indice_i.html</a>
+                </p>
+                <p class="fs-7 px-2 pt-1 pb-2 mx-auto" >Pertsona eta konputagailuen elkarrekintza (PKE) ikasgaian ikasitakoa baliatuz, eta boostrap tresna erabiliz, aurreko
+                    webgunetik abiatuz, diseinu egokiagoa garatu dugu, funtzionalitate berri batzuekin, responsive diseinu batekin, erabilgarria
+                    izateko bai ordenagailuetan, bai mugikorretan ere.
+                </p>
             </div>
-            <h2>Gure Taldea</h2>
-            <div class="col-lg-12">
-                <img class="rounded mx-auto d-block img-fluid" src="./images/descarga.png" border="0" />
+            <h4>Gure Taldea</h4>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <div class="card">
+                            <div class="container">
+                                <h5>Juan Alagon</h5>
+                                <p class="title">Garatzailea eta disenatzailea</p>
+                                <p>jalagon001@ikasle.ehu.eus</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container">
+                                <h5>Xabier Artola</h5>
+                                <p class="title">Garatzailea eta disenatzailea</p>
+                                <p>xartola003@ikasle.ehu.eus</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="card">
+                            <div class="container">
+                                <h5>David Pintado</h5>
+                                <p class="title">Garatzailea eta disenatzailea</p>
+                                <p>dpintado001@ikasle.ehu.eus</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <p class="fs-5 px-2 pt-1 pb-2 mx-auto">Web orri honen bitartez, JENUI aktak bilatu ahal
-                izango dira, hainbat modutan, eta beraien edukia ikustatu:
-                laburpena, informazioa edota JENUI aktak pdf formatuan.
-            </p>
-            <p class="fs-5 px-3 pt-2">Egin klik hurrengo botoian bilaketak egiten hasteko!</p>
-            <button id="bilatuBistara" class="btn btn-primary">Ados</button>
         </div>
     </div>
 </body>
