--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <script src="bistak/js/index.js" type="module"></script>
+    <script src="bistak/js/about.js" type="module"></script>
     <link rel="stylesheet" href="bistak/css/main.css">
     <style>
         #webgunea {
@@ -22,7 +23,15 @@
             width: 100%;
             height: 100%;
         }
-        #content {
+        #contentHeader {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+        }
+
+        #contentFooter {
             position: absolute;
             top: 0;
             left: 0;
@@ -33,7 +42,7 @@
         #aboutBistara {
             line-height: 12px;
             width: 100px;
-            font-size: 8pt;
+            font-size: 10pt;
             font-family: tahoma;
             margin-top: 10px;
             margin-right: 10px;
@@ -41,16 +50,45 @@
             top:0;
             right:0;
         }
+
+        #hasieraBistara {
+            line-height: 12px;
+            width: 100px;
+            font-size: 10pt;
+            font-family: tahoma;
+            margin-top: 10px;
+            margin-right: 120px;
+            position:absolute;
+            top:0;
+            right:0;
+        }
+
+        #Nabigazioa {
+            line-height: 12px;
+            width: 200px;
+            font-size: 15pt;
+            font-family: tahoma;
+            color: white;
+            margin-top: 18px;
+            margin-left: 18px;
+        }
+
+
     </style>
 </head>
 
 <body style="background: --background-var !important">
     <div id="content">
-        <header id="content">
+        <header id="contentHeader">
             <div class="nav">
+                <p id="Nabigazioa">Nabigazio-barra</p>
+                <button id="hasieraBistara" type="button" class="btn btn-primary ">Hasiera</button>
                 <button id="aboutBistara" type="button" class="btn btn-primary ">About us</button>
             </div>    
-          </header>
+        </header>
+        <div class="footer">
+            <p>©Copyright 2020-2024. All rights reserverd</p>
+        </div>
         <iframe id="webgunea">
         </iframe>
     </div>
