Arazo batzuk zuzenduta

--- a/index.html
+++ b/index.html
@@ -51,13 +51,25 @@
             right:0;
         }
 
-        #hasieraBistara {
+        #historialaBistara {
             line-height: 12px;
             width: 100px;
             font-size: 10pt;
             font-family: tahoma;
             margin-top: 10px;
             margin-right: 120px;
+            position:absolute;
+            top:0;
+            right:0;
+        }
+
+        #hasieraBistara {
+            line-height: 12px;
+            width: 100px;
+            font-size: 10pt;
+            font-family: tahoma;
+            margin-top: 10px;
+            margin-right: 230px;
             position:absolute;
             top:0;
             right:0;
@@ -83,6 +95,7 @@
             <div class="nav">
                 <p id="Nabigazioa">Nabigazio-barra</p>
                 <button id="hasieraBistara" type="button" class="btn btn-primary ">Hasiera</button>
+                <button id="historialaBistara" type="button" class="btn btn-primary ">Historiala</button>
                 <button id="aboutBistara" type="button" class="btn btn-primary ">About us</button>
             </div>    
         </header>
