--- a/bistak/aboutus.html
+++ b/bistak/aboutus.html
@@ -13,6 +13,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
+    <style>
+        #gmail {
+            font-size: 14px;
+        }
+    </style>
 </head>
 
 <body style="height: 100%;">
@@ -32,30 +37,30 @@
             <h4>Gure Taldea</h4>
             <div class="container">
                 <div class="row">
-                    <div class="col">
-                        <div class="card">
+                    <div class="col-sm">
+                        <div class="card .pe-4" style="width: 14rem;">
                             <div class="container">
                                 <h5>Juan Alagon</h5>
                                 <p class="title">Garatzailea eta disenatzailea</p>
-                                <p>jalagon001@ikasle.ehu.eus</p>
+                                <p id="gmail">jalagon001@ikasle.ehu.eus</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card">
+                    <div class="col-sm">
+                        <div class="card" style="width: 14rem;">
                             <div class="container">
                                 <h5>Xabier Artola</h5>
                                 <p class="title">Garatzailea eta disenatzailea</p>
-                                <p>xartola003@ikasle.ehu.eus</p>
+                                <p id="gmail">xartola003@ikasle.ehu.eus</p>
                             </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="card">
+                    <div class="col-sm">
+                        <div class="card" style="width: 14rem;">
                             <div class="container">
                                 <h5>David Pintado</h5>
                                 <p class="title">Garatzailea eta disenatzailea</p>
-                                <p>dpintado001@ikasle.ehu.eus</p>
+                                <p id="gmail">dpintado001@ikasle.ehu.eus</p>
                             </div>
                         </div>
                     </div>
