--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
             width: 100px;
             font-size: 10pt;
             font-family: tahoma;
-            margin-top: 10px;
             margin-right: 10px;
-            position:absolute;
-            top:0;
-            right:0;
         }
 
         #historialaBistara {
@@ -56,11 +52,6 @@
             width: 100px;
             font-size: 10pt;
             font-family: tahoma;
-            margin-top: 10px;
-            margin-right: 120px;
-            position:absolute;
-            top:0;
-            right:0;
         }
 
         #hasieraBistara {
@@ -68,21 +59,17 @@
             width: 100px;
             font-size: 10pt;
             font-family: tahoma;
-            margin-top: 10px;
-            margin-right: 230px;
-            position:absolute;
-            top:0;
-            right:0;
         }
 
         #Nabigazioa {
-            line-height: 12px;
-            width: 200px;
-            font-size: 15pt;
-            font-family: tahoma;
             color: white;
-            margin-top: 18px;
             margin-left: 18px;
+        }
+
+        #headerNav{
+            height: 50px;
+            background-color: #4d4d4d;
+            z-index: 1;
         }
 
 
@@ -92,12 +79,15 @@
 <body style="background: --background-var !important">
     <div id="content">
         <header id="contentHeader">
-            <div class="nav">
-                <p id="Nabigazioa">Nabigazio-barra</p>
-                <button id="hasieraBistara" type="button" class="btn btn-primary ">Hasiera</button>
-                <button id="historialaBistara" type="button" class="btn btn-primary ">Historiala</button>
-                <button id="aboutBistara" type="button" class="btn btn-primary ">About us</button>
-            </div>    
+            <nav id="headerNav" class="navbar navbar-dark justify-content-between">
+                <!-- Navbar content -->
+                <a id="Nabigazioa" class="navbar-brand">Nabigazio-barra</a>
+                <form class="form-inline">
+                    <button id="hasieraBistara" class="btn btn-primary mr-sm-2" type="buttom">Hasiera</button>
+                    <button id="historialaBistara" class="btn btn-primary mr-sm-2" type="buttom">Historiala</button>
+                    <button id="aboutBistara" class="btn btn-primary mr-sm-2" type="buttom">About us</button>
+                </form>
+            </nav>
         </header>
         <div class="footer">
             <p>©Copyright 2020-2024. All rights reserverd</p>
