--- a/bistak/aboutus.html
+++ b/bistak/aboutus.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html class="h-100" lang="en">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hasiera</title>
-    <script src="js/hasiera.js" type="module"></script>
+    <title>About Us</title>
+    <script src="js/about.js" type="module"></script>
     <link rel="stylesheet" href="css/about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
