--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 
 <head>
     <meta charset="UTF-8">
@@ -17,26 +17,27 @@
     <link rel="stylesheet" href="bistak/css/main.css">
     <style>
         #webgunea {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            /* position: absolute; */
+            /* top: 0; */
+            /* left: 0; */
+            /* width: 100%; */
+            /* height: 100%; */
         }
+
         #contentHeader {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            /* position: absolute; */
+            /* top: 0; */
+            /* left: 0; */
+            /* width: 100%; */
+            /* height: 100%; */
         }
 
         #contentFooter {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
+            /* position: absolute; */
+            /* top: 0; */
+            /* left: 0; */
+            /* width: 100%; */
+            /* height: 100%; */
         }
 
         #aboutBistara {
@@ -66,36 +67,66 @@
             margin-left: 18px;
         }
 
-        #headerNav{
-            height: 50px;
-            background-color: #4d4d4d;
+        #headerNav {
             z-index: 1;
         }
 
+        #navbarContent a {
+            color: white !important;
+        }
 
+
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            background-color: #4d4d4d;
+            color: white;
+            text-align: center;
+            z-index: 1;
+        }
     </style>
 </head>
 
-<body style="background: --background-var !important">
-    <div id="content">
+<body style="background: --background-var !important; height: 100% !important;">
+    <div id="content" class="h-100">
         <header id="contentHeader">
-            <nav id="headerNav" class="navbar navbar-dark justify-content-between">
-                <!-- Navbar content -->
-                <a id="Nabigazioa" class="navbar-brand">Nabigazio-barra</a>
-                <form class="form-inline">
-                    <button id="hasieraBistara" class="btn btn-primary mr-sm-2" type="buttom">Hasiera</button>
-                    <button id="historialaBistara" class="btn btn-primary mr-sm-2" type="buttom">Historiala</button>
-                    <button id="aboutBistara" class="btn btn-primary mr-sm-2" type="buttom">About us</button>
-                </form>
+            <nav id="headerNav" class="navbar navbar-expand-lg bg-dark">
+                <div class="container-fluid">
+                    <a id="Nabigazioa" class="navbar-brand" href="#">AENUI</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- Navbar content -->
+                    <div class="collapse navbar-collapse" id="navbarContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a id="hasieraBistara" class="nav-link fs-6" type="button">Hasiera</a>
+                            </li>
+                            <li class="nav-item">
+                                <a id="historialaBistara" class="nav-link fs-6" type="button">Historiala</a>
+                            </li>
+                            <li class="nav-item">
+                                <a id="aboutBistara" class="nav-link fs-6" type="button">About
+                                    us</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </nav>
         </header>
-        <div class="footer">
-            <p>©Copyright 2020-2024. All rights reserverd</p>
+        <div style="width: 100 !important; height: 90% !important;">
+            <iframe id="webgunea" class="w-100 h-100">
+            </iframe>
         </div>
-        <iframe id="webgunea">
-        </iframe>
+        <footer class="footer bg-dark">
+            <p>©Copyright 2020-2024. All rights reserverd</p>
+        </footer>
     </div>
-    
+
 </body>
 
 </html>
