--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
         crossorigin="anonymous"></script>
     <script src="bistak/js/index.js" type="module"></script>
-    <script src="bistak/js/about.js" type="module"></script>
+    <script src="bistak/js/header.js" type="module"></script>
     <link rel="stylesheet" href="bistak/css/main.css">
     <style>
         #webgunea {
