--- a/bistak/informazioa.html
+++ b/bistak/informazioa.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Informazioa</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/informazioa.css">
     <script src="js/informazioa.js" type="module"></script>
 </head>
 <body style="background: var(--background-var) !important;">
