--- a/bistak/aboutus.html
+++ b/bistak/aboutus.html
@@ -9,10 +9,11 @@
     <script src="js/about.js" type="module"></script>
     <link rel="stylesheet" href="css/about.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+    crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/main.css">
     <style>
         #gmail {
             font-size: 14px;
@@ -27,7 +28,7 @@
     </style>
 </head>
 
-<body style="height: 100% !important;background-color: #E07A5F !important;">
+<body style="height: 100% !important;background-color: var(--background-var) !important;">
     <div class="container-fluid text-center d-flex align-items-center" id="content">
         <div class="mx-auto border shadow pt-5 pb-5 col-md-6 col-sm-10" style="background-color: white !important;">
             <div class="about-section">
