--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
     <title>Document</title>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.1/dist/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -91,7 +91,7 @@
     </style>
 </head>
 
-<body style="background: --background-var !important; height: 100% !important;">
+<body style="background: var(--background-var) !important; height: 100% !important;">
     <div id="content" class="h-100">
         <header id="contentHeader">
             <nav id="headerNav" class="navbar navbar-expand-lg bg-dark">
