--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
 
         #historialaBistara {
             line-height: 12px;
-            width: 100px;
+            /* width: 100px; */
             font-size: 10pt;
             font-family: tahoma;
         }
 
-        #hasieraBistara {
+        #bilatuBistara {
             line-height: 12px;
-            width: 100px;
+            /* width: 100px; */
             font-size: 10pt;
             font-family: tahoma;
         }
@@ -106,7 +106,7 @@
                     <div class="collapse navbar-collapse" id="navbarContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a id="hasieraBistara" class="nav-link fs-6" type="button">Hasiera</a>
+                                <a id="bilatuBistara" class="nav-link fs-6" type="button">Bilatu</a>
                             </li>
                             <li class="nav-item">
                                 <a id="historialaBistara" class="nav-link fs-6" type="button">Historiala</a>
