Gehitutako estilo aldaketak: - navabar-eko ikonoa hobe ikusteko aldatu. -Ezabaketarako botoi gorria. -historialean txikiago azaltzen zirnaktei zabalera finkatu. - margen eta pading-ak gehitu formatu aldaketak egiteko

--- a/bistak/aboutus.html
+++ b/bistak/aboutus.html
@@ -30,9 +30,9 @@
 
 <body style="height: 100% !important;background-color: var(--background-var) !important;">
     <div class="container-fluid text-center d-flex align-items-center" id="content">
-        <div class="mx-auto border shadow pt-5 pb-5 col-md-6 col-sm-10" style="background-color: white !important;">
+        <div class="mx-auto border shadow pt-4 pb-5 col-md-6 col-sm-10" style="background-color: white !important;">
             <div class="about-section">
-                <h1>About Us</h1>
+                <h1 class="pb-2">About Us</h1>
                 <p class="fs-7 px-2 pt-1 pb-2 mx-auto">UPV/EHU-ko Ingenieria Informatika graduko 3.mailako ikasleak
                     gara, eta webgune honen bitartez boostrap tresna landu dugu,
                     existitzen den webgune baten gainean aplikatuz:
@@ -45,7 +45,7 @@
                     izateko bai ordenagailuetan, bai mugikorretan ere.
                 </p>
             </div>
-            <h4>Gure Taldea</h4>
+            <h4 class="py-2">Gure Taldea</h4>
             <div class="container">
                 <div class="row">
                     <div class="col-sm">
