--- a/bistak/historiala.html
+++ b/bistak/historiala.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
             <div id="ezabatuContainer" class="m-auto pt-5">
-                <button id="ezabatu" class="btn btn-primary">Ezabatu</button>
+                <button id="ezabatu" class="btn btn-danger">Ezabatu</button>
             </div> 
         </div>
     </div>
