--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body style="background: var(--background-var) !important; height: 100% !important;">
     <div id="content" class="h-100">
         <header id="contentHeader">
-            <nav id="headerNav" class="navbar navbar-expand-lg bg-dark">
+            <nav id="headerNav" class="navbar navbar-dark navbar-expand-lg bg-dark">
                 <div class="container-fluid">
                     <a id="Nabigazioa" class="navbar-brand" href="#">AENUI</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
