Historialaren fonko kolore aldaketa eta web guneari formatu berdina emateko aldaketak: panel guztien ertzak borobildu adibidez

--- a/bistak/aboutus.html
+++ b/bistak/aboutus.html
@@ -30,7 +30,7 @@
 
 <body style="height: 100% !important;background-color: var(--background-var) !important;">
     <div class="container-fluid text-center d-flex align-items-center" id="content">
-        <div class="mx-auto border shadow pt-4 pb-5 col-md-6 col-sm-10" style="background-color: white !important;">
+        <div class="mx-auto border shadow pt-4 pb-5 col-md-6 col-sm-10 rounded" style="background-color: white !important;">
             <div class="about-section">
                 <h1 class="pb-2">About Us</h1>
                 <p class="fs-7 px-2 pt-1 pb-2 mx-auto">UPV/EHU-ko Ingenieria Informatika graduko 3.mailako ikasleak
@@ -51,7 +51,7 @@
                     <div class="col-sm">
                         <div class="card .pe-4" style="width: 14rem;">
                             <div class="container">
-                                <h5>Juan Alagon</h5>
+                                <h5 class="pt-2">Juan Alagon</h5>
                                 <p class="title">Garatzailea eta disenatzailea</p>
                                 <p id="gmail">jalagon001@ikasle.ehu.eus</p>
                             </div>
@@ -60,7 +60,7 @@
                     <div class="col-sm">
                         <div class="card" style="width: 14rem;">
                             <div class="container">
-                                <h5>Xabier Artola</h5>
+                                <h5 class="pt-2">Xabier Artola</h5>
                                 <p class="title">Garatzailea eta disenatzailea</p>
                                 <p id="gmail">xartola003@ikasle.ehu.eus</p>
                             </div>
@@ -69,7 +69,7 @@
                     <div class="col-sm">
                         <div class="card" style="width: 14rem;">
                             <div class="container">
-                                <h5>David Pintado</h5>
+                                <h5 class="pt-2">David Pintado</h5>
                                 <p class="title">Garatzailea eta disenatzailea</p>
                                 <p id="gmail">dpintado001@ikasle.ehu.eus</p>
                             </div>
