--- a/bistak/hasiera.html
+++ b/bistak/hasiera.html
@@ -18,7 +18,7 @@
 
 <body style="height: 100%;">
     <div class="container-fluid text-center bg-light d-flex align-items-center h-100" style="background: var(--background-var) !important;">
-        <div class="mx-auto border shadow pt-5 pb-5 col-md-6 col-sm-10" style="background-color: white !important;">
+        <div class="mx-auto border shadow pt-5 pb-5 col-md-6 col-sm-10 rounded" style="background-color: white !important;">
             <div class="text-uppercase">
                 <h1 class="h1">Actas de Jenui</h1>
             </div>
