--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 
 <body style="background: var(--background-var) !important; height: 100% !important;">
-    <div id="content" class="h-100">
+    <div id="content" class="vh-100">
         <header id="contentHeader">
             <nav id="headerNav" class="navbar navbar-dark navbar-expand-lg bg-dark">
                 <div class="container-fluid">
