--- a/bistak/historiala.html
+++ b/bistak/historiala.html
@@ -14,12 +14,12 @@
 </head>
 <body style="background: var(--background-var) !important;" class="vh-100">
     <div id="content" class="text-center d-flex align-items-center h-100 flex-column justify-content-center">
-        <div id="container" class="mx-auto border bg-white shadow pt-5 pb-5 col-md-6 col-sm-10" >
-            <div id="historiala-container" class="m-auto border bg-secondary shadow pt-5 pb-5 col-md-6 col-sm-10">
+        <div id="container" class="mx-auto bg-white pt-5 pb-5 col-md-6 col-xs-10 rounded" >
+            <div id="historiala-container" class="m-auto pt-5 pb-5 col-md-10 col-sm-10">
                 <div id="historiala">
                 </div>
             </div>
-            <div id="ezabatuContainer" class="m-auto pt-5">
+            <div id="ezabatuContainer" class="m-auto pt-3">
                 <button id="ezabatu" class="btn btn-danger">Ezabatu</button>
             </div> 
         </div>
