--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             </iframe>
         </div>
         <footer class="footer bg-dark">
-            <p>©Copyright 2020-2024. All rights reserverd</p>
+            <p>©Copyright 2020-2024. All rights reserved</p>
         </footer>
     </div>
 
