Emailaren kolorea aldatu

--- a/bistak/aboutus.html
+++ b/bistak/aboutus.html
@@ -53,7 +53,7 @@
                             <div class="container">
                                 <h5 class="pt-2">Juan Alagon</h5>
                                 <p class="title">Garatzailea eta disenatzailea</p>
-                                <p id="gmail">jalagon001@ikasle.ehu.eus</p>
+                                <p id="gmail" class="text-primary">jalagon001@ikasle.ehu.eus</p>
                             </div>
                         </div>
                     </div>
@@ -62,7 +62,7 @@
                             <div class="container">
                                 <h5 class="pt-2">Xabier Artola</h5>
                                 <p class="title">Garatzailea eta disenatzailea</p>
-                                <p id="gmail">xartola003@ikasle.ehu.eus</p>
+                                <p id="gmail" class="text-primary">xartola003@ikasle.ehu.eus</p>
                             </div>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                             <div class="container">
                                 <h5 class="pt-2">David Pintado</h5>
                                 <p class="title">Garatzailea eta disenatzailea</p>
-                                <p id="gmail">dpintado001@ikasle.ehu.eus</p>
+                                <p id="gmail" class="text-primary">dpintado001@ikasle.ehu.eus</p>
                             </div>
                         </div>
                     </div>
